@@ -3,5 +3,5 @@
 struct __attribute((visibility("hidden"))) B;
 struct __attribute((visibility("default"))) B;	// { dg-error "visibility" }
 
-__attribute ((visibility ("hidden"))) void f();	// { dg-warning "previous" }
+__attribute ((visibility ("hidden"))) void f();	// { dg-message "previous" }
 __attribute ((visibility ("default"))) void f(); // { dg-warning "visibility" }
